pxc/tests/test_031_thrattr/nomt.px

public namespace nomt;
import common -;

mtvaluetype struct bar {
  public int z;
}

multithreaded struct foo(bar const& bx) {
  int x;
  int y;
  bar b;
  ptr{bar} bp = make_ptr{bar}(bx); // error: not multithreaded
  public function int getbz() const { return bp->z; }
}

function void t1() {
  foo f = foo(bar(55));
  println(f.getbz());
}

t1();

